@startuml
hide circle
skinparam linetype ortho

entity customers {
  * customer_id : integer <<PK>>
  --
  name : text
  email : text <<UNIQUE>>
  phone : text
}

entity addresses {
  * address_id : integer <<PK>>
  --
  customer_id : integer <<FK>>
  address : text
}

entity categories {
  * category_id : integer <<PK>>
  --
  name : text <<UNIQUE>>
}

entity products {
  * product_id : integer <<PK>>
  --
  name : text <<UNIQUE>>
  category_id : integer <<FK>>
  price : numeric
}

entity orders {
  * order_id : integer <<PK>>
  --
  customer_id : integer <<FK>>
  address_id : integer <<FK>>
  order_date : date
  status : text
  total_amount : numeric
}

entity order_items {
  * order_id : integer <<PK, FK>>
  * product_id : integer <<PK, FK>>
  --
  quantity : integer
  price_at_order : numeric
}

customers ||--o{ addresses
customers ||--o{ orders
addresses ||--o{ orders
categories ||--o{ products
orders ||--o{ order_items
products ||--o{ order_items

@enduml
